# advent-of-code

./: Cargo.toml  Justfile  README.md  build.rs
.trunk/: trunk.yaml
aoc-2018/: Cargo.toml
aoc-2019/: Cargo.toml
aoc-2022/: Cargo.toml
aoc-2023/: Cargo.toml
aoc-2024/: Cargo.toml
aoc-2024/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day21.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
aoc-cli/: Cargo.toml
aoc-common/: Cargo.toml
aoc-common/src/: lib.rs  prelude.rs  task.rs
aoc-data/: Cargo.toml
aoc-data/src/: resource.rs
crates/aoc-2015/: Cargo.toml
crates/aoc-2015/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
crates/aoc-2016/: Cargo.toml
crates/aoc-2016/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
crates/aoc-2017/: Cargo.toml
crates/aoc-2017/src/: day1.rs  (+24 more)
crates/aoc-2018/: Cargo.toml
crates/aoc-2019/: Cargo.toml
crates/aoc-2020/: Cargo.toml
crates/aoc-2021/: Cargo.toml
crates/aoc-2022/: Cargo.toml
crates/aoc-2023/: Cargo.toml
crates/aoc-2025/: Cargo.toml
crates/aoc-cli/: Cargo.toml
crates/aoc-common/: Cargo.toml
(+182 files in other folders)
