[workspace]
resolver = "3"
members = [
  "aoc-2015",
  "aoc-2016",
  "aoc-2017",
  "aoc-2018",
  "aoc-2019",
  "aoc-2020",
  "aoc-2021",
  "aoc-2022",
  "aoc-2023",
  "aoc-2024",
  "aoc-2025",
  "aoc-cli",
  "aoc-common",
  "aoc-data",
]

[workspace.dependencies]
aoc-2015 = { path = "aoc-2015" }
aoc-2016 = { path = "aoc-2016" }
aoc-2017 = { path = "aoc-2017" }
aoc-2018 = { path = "aoc-2018" }
aoc-2019 = { path = "aoc-2019" }
aoc-2020 = { path = "aoc-2020" }
aoc-2021 = { path = "aoc-2021" }
aoc-2022 = { path = "aoc-2022" }
aoc-2023 = { path = "aoc-2023" }
aoc-2024 = { path = "aoc-2024" }
aoc-2025 = { path = "aoc-2025" }
aoc-common = { path = "aoc-common" }
aoc-data = { path = "aoc-data" }

itertools = { version = "0.14.0" }
nalgebra = { version = "0.34.1" }
nom = { version = "7.0.0" }
thiserror = { version = "2.0.17" }
strum = { version = "0.27.2", features = ["derive"] }
z3 = { version = "0.19.2" }

rstest = { version = "0.26.1" }
